# sinerack

./: .gitattributes  AGENTS.md  Cargo.toml
.github/workflows/: main.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/AREAS/: buffer.md  float.md  latency.md
docs/DECISIONS/: 0001-prism-as-shared-dsp-core.md  README.md
docs/TEMPLATES/: decision-template.md
src/: buffer.rs  float.rs  lib.rs
