[package]
name = "prism"
description = "Shared DSP core for the q-lib audio crates: primitives and common value types."
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/QsKue/prism"
readme = "README.md"

[dependencies]
rustfft = { version = "6.4", default-features = false }
